Moved dieValues from each player to all off them together at DiceManager as it is the only class that uses it and increase cohesion and reduce coupling. Fixed the logic of the roll counting as it was previously increased once each turn instead of once per roll.